k8s_kind/01_mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: dev
spec:
  serviceName: "mysql"
  replicas: 1  # You can scale this number later
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql  # Mounting the PVC to this path
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: mysql
#   namespace: dev  
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: mysql
#   template:
#     metadata:
#       labels:
#         app: mysql
#     spec:
#       containers:
#       - name: mysql
#         image: mysql:latest
#         env:
#         - name: MYSQL_ROOT_PASSWORD
#           value: "Test@123"
#         - name: MYSQL_DATABASE
#           value: "chatapp"
#         ports:
#         - containerPort: 3306
