k8s_kind/03_chatapp_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp
  namespace: dev  
  labels:
    app: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapp
  template:
    metadata:
      labels:
        app: chatapp
    spec:
      containers:
      - name: chatapp
        image: shrij34/chatapp:v1
        ports:
        - containerPort: 8080
