k8s_kind/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: chatapp
spec:
  containers:
  - name: chatapp
    image: shrij34/chatapp:v1
    ports:
    - containerPort: 8080
