k8s_kind/02_mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: dev  
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
