k8s_kind/04_chatapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatapp
  namespace: dev  
spec:
  selector:
    app: chatapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer  # or ClusterIP for internal-only access
