k8s_kind/ingress_chatapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost # Use localhost for local access
    http:
      paths:
      - path: /chatapp
        pathType: Prefix
        backend:
          service:
            name: chatapp
            port:
              number: 8080
